--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Sportify"
+        android:theme="@style/Theme.SportifyAndroidAppMain"
         tools:targetApi="31">
 
         <activity
             android:name=".activities.MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.SportifyAndroidAppMain.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
